syntax = "proto3";
import "p2p/proto/class.proto";
import "p2p/proto/common.proto";
import "p2p/proto/transaction.proto";

message BroadcastedTransaction
{
    message DeclareV3 {
        Address sender = 1;
        AccountSignature signature = 2;
        Cairo1Class contract_class = 3;
        Felt252 nonce = 4;
        Hash compiled_class_hash = 5;
        ResourceBounds resource_bounds = 6;
        uint64 tip = 7;
        repeated Felt252 paymaster_data = 8;
        repeated Felt252 account_deployment_data = 9;
        VolitionDomain nonce_data_availability_mode = 10;
        VolitionDomain fee_data_availability_mode = 11;
    }

    message DeployAccountV3 {
        AccountSignature signature = 1;
        Hash class_hash = 2;
        Felt252 nonce = 3;
        Felt252 address_salt = 4;
        repeated Felt252 calldata = 5;
        ResourceBounds resource_bounds = 6;
        uint64 tip = 7;
        repeated Felt252 paymaster_data = 8;
        VolitionDomain nonce_data_availability_mode = 9;
        VolitionDomain fee_data_availability_mode = 10;
    }

    message InvokeV3 {
        Address sender = 1;
        AccountSignature signature = 2;
        repeated Felt252 calldata = 3;
        ResourceBounds resource_bounds = 4;
        uint64 tip = 5;
        repeated Felt252 paymaster_data = 6;
        repeated Felt252 account_deployment_data = 7;
        VolitionDomain nonce_data_availability_mode = 8;
        VolitionDomain fee_data_availability_mode = 9;
        Felt252 nonce = 10;
    }

    oneof txn {
        DeclareV3 declare_v3 = 1;
        DeployAccountV3 deploy_account_v3 = 2;
        InvokeV3 invoke_v3 = 3;
    }
}